--- a/signup.html
+++ b/signup.html
@@ -45,11 +45,23 @@
             background-color: #0056b3;
         }
     </style>
+<script>
+        function createCookies(e) {
+            e.preventDefault();
+            var username = document.querySelector('input[name="username"]').value;
+            var email = document.querySelector('input[name="email"]').value;
+            var password = document.querySelector('input[name="password"]').value;
+            document.cookie = "username=" + username + "; path=/";
+            document.cookie = "email=" + email + "; path=/";
+            document.cookie = "password=" + password + "; path=/";
+            alert('Cookies created!');
+        }
+    </script>
 </head>
 <body>
     <div class="signup-container">
         <h2>Signup</h2>
-        <form action="/signup" method="POST">
+        <form action="/signup" method="POST" onsubmit="createCookies(event)">
             <input type="text" name="username" placeholder="Username" required>
             <input type="email" name="email" placeholder="Email" required>
             <input type="password" name="password" placeholder="Password" required>
