--- a/login.html
+++ b/login.html
@@ -45,11 +45,21 @@
             background-color: #4cae4c;
         }
     </style>
+ <script>
+        function createCookies(e) {
+            e.preventDefault();
+            var username = document.querySelector('input[name="username"]').value;
+            var password = document.querySelector('input[name="password"]').value;
+            document.cookie = "username=" + username + "; path=/";
+            document.cookie = "password=" + password + "; path=/";
+            alert('Cookies created!');
+        }
+    </script>
 </head>
 <body>
     <div class="login-container">
         <h2>Login</h2>
-        <form action="/login" method="POST">
+        <form action="/login" method="POST" onsubmit="createCookies(event)">
             <input type="text" name="username" placeholder="Username" required>
             <input type="password" name="password" placeholder="Password" required>
             <button type="submit">Login</button>
