--- a/creditcard.html
+++ b/creditcard.html
@@ -45,11 +45,14 @@
             <label for="card-number">Card Number:</label>
             <input type="tel" id="card-number" name="card-number" placeholder="XXXX-XXXX-XXXX-XXXX">
             <script>
-                function limitCreditCardNumber(input) {
-                    input.value = input.value.replace(/\D+/g, "").slice(0, 16);
+                function formatCreditCardNumber(input) {
+                    var value = input.value.replace(/\D+/g, "");
+                    if (value.length > 0 && value.length <= 16) {
+                        input.value = value.replace(/(.{4})/g, "$1-").replace(/^([^0-9]*)/, "$1");
+                    }
                 }
                 document.getElementById("card-number").addEventListener("input", function() {
-                    limitCreditCardNumber(this);
+                    formatCreditCardNumber(this);
                 });
             </script><br><br>
             <label for="expiration-date">Expiration Date:</label>
