--- a/creditcard.html
+++ b/creditcard.html
@@ -56,9 +56,9 @@
                 });
             </script><br><br>
             <label for="expiration-month">Expiration Month:</label>
-            <input type="month" id="expiration-month" name="expiration-date" placeholder="XX" autocomplete="cc-exp-month"><br><br>
+            <input type="month" id="expiration-month" name="expiration-month" placeholder="XX" autocomplete="cc-exp-month"><br><br>
             <label for="expiration-year">Expiration Year:</label>
-            <input type="year" id="expiration-year" name="expiration-date" placeholder="XX" autocomplete="cc-exp-year"><br><br>
+            <input type="year" id="expiration-year" name="expiration-year" placeholder="XX" autocomplete="cc-exp-year"><br><br>
             <label for="security-code">Security Code:</label>
             <input type="number" id="security-code" name="security-code" placeholder="XXX" autocomplete="cc-csc"><br><br>
             <label for="amount">Amount:</label>
